--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "start": "serve dist"
+        "start": "serve dist --port $PORT"
     },
     "dependencies": {
         "axios": "^1.7.9",
@@ -26,6 +26,7 @@
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.18",
         "globals": "^15.14.0",
+        "serve": "^14.2.4",
         "vite": "^6.1.0"
     }
 }
